Closed
Bug 270030
Opened 21 years ago
Closed 21 years ago
Tabbing through document is broken in certain cases
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: mcsmurf, Assigned: aaronlev)
References
()
Details
(Keywords: access, regression)
Attachments
(2 files)
|
98 bytes,
text/html
|
Details | |
|
1.28 KB,
patch
|
ginnchen+exoracle
:
review+
neil
:
superreview+
asa
:
approval1.8a5+
|
Details | Diff | Splinter Review |
happens with current cvs trunk build
To reproduce:
1. Go to URL
2. Try to tab through the document
Observe that it hangs at the checkbox. If you press the tab button once again
(when the selection is at the checkbox), you see that the statusbar updates (it
displays the url of the link), but the dotted border for the selection doesn't
move on. With the build from 2004-08-25-08 it works, with 2004-09-02-06 it
doesn't. Between those builds i couldn't test, because there are no nightly
builds available for that timeframe for Windows on
http://archive.mozilla.org/pub/mozilla/nightly/. But someone with Linux might
want to test some builds and so decrease the regression window.
Comment 1•21 years ago
|
||
I can see bug in the latest nightlies trunk.
It works for me with a 2004-08-31 (7:12am) trunk build.
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Reporter | ||
Comment 2•21 years ago
|
||
Broke between 2004-08-31 21:00:00 and 2004-09-02 00:00:00
Bonsai link:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=SeaMonkeyAll&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2004-08-31+20%
3A00%3A00&maxdate=2004-09-02+01%3A00%3A00&cvsroot=%2Fcvsroot
| Reporter | ||
Comment 3•21 years ago
|
||
Take this link, the first one doesn't seem to work:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=SeaMonkeyAll&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2004-08-31+20%
3A00%3A00&maxdate=2004-09-02+01%3A00%3A00&cvsroot=%2Fcvsroot
| Reporter | ||
Comment 4•21 years ago
|
||
OS->All (tested on Linux for nightly builds)
OS: Windows 2000 → All
| Assignee | ||
Comment 5•21 years ago
|
||
What date range were you trying to give for bonsai? That's over a month's worth
of checkins.
| Reporter | ||
Comment 6•21 years ago
|
||
(In reply to comment #5)
> What date range were you trying to give for bonsai? That's over a month's worth
> of checkins.
Maybe you need to manually enter the checkin dates into bonsai, i copy&pasted
that link from Konqueror, which didn't quite work as it seems. One last attempt:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=SeaMonkeyAll&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2004-08-31+20%3A00%3A00&maxdate=2004-09-02+01%3A00%3A00&cvsroot=%2Fcvsroot
| Assignee | ||
Comment 7•21 years ago
|
||
| Assignee | ||
Comment 8•21 years ago
|
||
Surprising this didn't get noticed before, I don't know how it ever worked in
these cases.
| Assignee | ||
Updated•21 years ago
|
Attachment #166241 -
Flags: superreview?(neil.parkwaycc.co.uk)
Attachment #166241 -
Flags: review?(neil.parkwaycc.co.uk)
Comment 9•21 years ago
|
||
Comment on attachment 166241 [details] [diff] [review]
Allow selection offsets of 0
Aren't offsets always positive (i.e. negative offsets are excluded by range
code)? And I'm fortunately not allowed to do content r+sr :-P
Attachment #166241 -
Flags: superreview?(neil.parkwaycc.co.uk)
Attachment #166241 -
Flags: review?(neil.parkwaycc.co.uk)
| Assignee | ||
Comment 10•21 years ago
|
||
(In reply to comment #9)
Neil, aren't you allowed to review stuff in esm? That's focus related and by now
you know as much as anyone.
> Aren't offsets always positive
False, zero is allowed
> (i.e. negative offsets are excluded by range code)?
True, but zero is still allowed
For example SetStartBefore on a first child sets the start to parent, 0
| Assignee | ||
Comment 11•21 years ago
|
||
*** Bug 268983 has been marked as a duplicate of this bug. ***
Comment 12•21 years ago
|
||
(In reply to comment #10)
>(In reply to comment #9)
>Neil, aren't you allowed to review stuff in esm?
I said r+sr, I'll do one of your choice.
>>(i.e. negative offsets are excluded by range code)?
>True, but zero is still allowed
What I meant was, will endOffset ever be negative in normal use, i.e. should you
be asserting it is nonnegative in debug, rather than testing it?
| Assignee | ||
Comment 13•21 years ago
|
||
Comment on attachment 166241 [details] [diff] [review]
Allow selection offsets of 0
You're right, those can be changed to assertions. New patch necessary?
Attachment #166241 -
Flags: superreview?(neil.parkwaycc.co.uk)
Comment 14•21 years ago
|
||
Comment on attachment 166241 [details] [diff] [review]
Allow selection offsets of 0
sr=me with those conditions removed in release builds (I don't care about debug
builds).
Attachment #166241 -
Flags: superreview?(neil.parkwaycc.co.uk) → superreview+
| Assignee | ||
Updated•21 years ago
|
Attachment #166241 -
Flags: review?(ginn.chen)
Comment 15•21 years ago
|
||
Comment on attachment 166241 [details] [diff] [review]
Allow selection offsets of 0
r=me
Attachment #166241 -
Flags: review?(ginn.chen) → review+
| Assignee | ||
Updated•21 years ago
|
Attachment #166241 -
Flags: approval1.8a5?
Comment 16•21 years ago
|
||
Comment on attachment 166241 [details] [diff] [review]
Allow selection offsets of 0
a=asa for 1.8a5 checkin.
Attachment #166241 -
Flags: approval1.8a5? → approval1.8a5+
| Assignee | ||
Comment 17•21 years ago
|
||
Checking in nsEventStateManager.cpp;
/cvsroot/mozilla/content/events/src/nsEventStateManager.cpp,v <--
nsEventStateManager.cpp
new revision: 1.544; previous revision: 1.543
done
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 18•21 years ago
|
||
V.
With a current CVS trunk build the testcases work.
Status: RESOLVED → VERIFIED
Updated•7 years ago
|
Component: Keyboard: Navigation → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•