Bug 270030. Tabbing gets stuck at first child input elements. r=ginn.chen, sr=neil.parkway, a=asa